CodeRabbit suggested fixes.